@@ -71,7 +71,9 @@
  */
 @interface EaseSineInOut : EaseAction <NSCopying> {} @end
 
-/** Ease Elastic abstract class */
+/** Ease Elastic abstract class
+ @since v0.8.2
+ */
 @interface ElasticAction : EaseAction <NSCopying>
 {
 	float period_;
@@ -86,20 +88,43 @@
 -(id) initWithAction: (IntervalAction*) action period:(float)period;
 @end
 
-/** Ease Elastic In action */
+/** Ease Elastic In action.
+ @warning This action doesn't use a biyective fucntion. Actions like Sequence might have an unexpected result when used with this action.
+ @since v0.8.2
+ */
 @interface EaseElasticIn : ElasticAction <NSCopying> {} @end
-/** Ease Elastic Out action. */
+/** Ease Elastic Out action.
+ @warning This action doesn't use a biyective fucntion. Actions like Sequence might have an unexpected result when used with this action.
+ @since v0.8.2
+ */
 @interface EaseElasticOut : ElasticAction <NSCopying> {} @end
-/** Ease Elastic InOut action */
+/** Ease Elastic InOut action.
+ @warning This action doesn't use a biyective fucntion. Actions like Sequence might have an unexpected result when used with this action.
+ @since v0.8.2
+ */
 @interface EaseElasticInOut : ElasticAction <NSCopying> {} @end
 
-
+/** EaseBounce abstract class.
+ @since v0.8.2
+*/
 @interface EaseBounce : EaseAction <NSCopying> {} @end
 
+/** EaseBounceIn action.
+ @warning This action doesn't use a biyective fucntion. Actions like Sequence might have an unexpected result when used with this action.
+ @since v0.8.2
+*/
 @interface EaseBounceIn : EaseBounce <NSCopying> {} @end
 
+/** EaseBounceOut action.
+ @warning This action doesn't use a biyective fucntion. Actions like Sequence might have an unexpected result when used with this action.
+ @since v0.8.2
+ */
 @interface EaseBounceOut : EaseBounce <NSCopying> {} @end
 
+/** EaseBounceInOut action.
+ @warning This action doesn't use a biyective fucntion. Actions like Sequence might have an unexpected result when used with this action.
+ @since v0.8.2
+ */
 @interface EaseBounceInOut : EaseBounce <NSCopying> {} @end
 
 
